# Hackaton15/SV77217548/src/routes/authJwt.routes.ts
@@ -1,10 +1,14 @@
 import {Router} from "express";
 import * as controller from "../controllers/authJwt.controller";
 import requireAuthJwt from "../middleware/authJwt";
+import {authLimiter} from "../middleware/rateLimit";
 
 const router = Router();
 
-router.post("/jwt/login", controller.login);
+router.post("/jwt/login", authLimiter, (req, res) => {
+    // #swagger.tags = ["JWT"]
+    return controller.login(req, res);
+});
 router.post("/jwt/refresh", (req, res) => {
     // #swagger.tags = ["JWT"]
     // #swagger.security = [{"refreshAuth": []}]
